src/routes/help.css
.help-container {
  margin-top: 96px;
}

.help-container .help-write-to-us {
  font-weight: 600;
}

.help-container .highlight-purple {
  color: #674cf3;
}

.help-container-welcome {
  display: flex;
  align-items: center;
  justify-content: space-around;
  height: 288px;
  /* margin-right: 0 !important; */
  /* margin-left: 0 !important; */
  margin-right: 0 !important;
  margin-left: -27px !important;
}

.help-heading {
  font-weight: 600 !important;
}

.help-faq-container {
  padding-left: 2.5rem !important;
  padding-right: 3rem !important;
}

.help-faq-row {
  position: relative;
  display: flex;
  justify-content: flex-start;
  align-items: baseline;
  /* border-bottom: 1px dotted rgba(219, 219, 219, 0.7); */
  /* border-bottom: 3px dashed rgba(219, 219, 219, 0.5) !important; */
}

.help-faq-row-horizontal-line {
  position: absolute;
  z-index: -1;
  bottom: 9px;
  width: 100%;
  border-bottom: 1.5px dashed rgba(219, 219, 219, 0.5) !important;
}

.help-faq-row > div {
  display: flex;
  justify-content: flex-start;
  align-items: baseline;
}
.help-faq-row h4 {
  font-family: Quicksand;
  font-size: 27px;
  padding-bottom: 16px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 0.78;
  letter-spacing: normal;
  text-align: left;
  color: #002f4f;
  margin-right: 64px;
  opacity: 0.5;
  border-bottom: none;
}

.help-faq-row h4.active {
  opacity: 1;
  border-bottom: 4.5px solid #002f4f;
}

.help-card {
  cursor: pointer;
  border: none !important;
}

.help-card {
  /* border-bottom: 3px dotted rgba(219, 219, 219, 0.7) !important; */
  border-bottom: 1.5px dashed rgba(219, 219, 219, 0.7) !important;
  transition: 1.5s ease-in-out;
}

.help-card-header {
  display: flex;
  padding: 32px 0rem !important;
  align-items: center;
  justify-content: space-between;
  background-color: white !important;
}

.help-card-header h5 {
  color: #002f4f;
  font-weight: 600;
}

.help-card-header span {
  color: #674cf3;
  font-size: 33px;
}

.help-card-body {
  font-weight: normal !important;
  font-stretch: normal !important;
  font-style: normal !important;
  line-height: 1.5 !important;
  letter-spacing: normal !important;
  text-align: left !important;
  color: #93a4b8 !important;
}

/* fontWeight: "normal",
fontStretch: "normal",
fontStyle: "normal",
lineHeight: 1.5,
letterSpacing: "normal",
textAlign: "left",
color: "#93a4b8", */

.cursor-pointer {
  cursor: pointer;
}

